--- a/codepath-week3/Base.lproj/Main.storyboard
+++ b/codepath-week3/Base.lproj/Main.storyboard
@@ -22,8 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PBr-IV-hNQ">
-                                <rect key="frame" x="87.5" y="303.5" width="200" height="60"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PBr-IV-hNQ">
+                                <rect key="frame" x="88.5" y="303.5" width="200" height="60"/>
                                 <color key="backgroundColor" red="0.21543380742915175" green="0.58235100560145869" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Egh-SD-8dU"/>
@@ -38,14 +38,24 @@
                                     <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BRs-89-mnN"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Twitter_Circle_blue" translatesAutoresizingMaskIntoConstraints="NO" id="dfc-HW-0fa">
+                                <rect key="frame" x="137" y="131" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="QM7-k7-0NW"/>
+                                    <constraint firstAttribute="width" constant="100" id="XDj-F0-LMr"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="dfc-HW-0fa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="111" id="23g-c7-3s6"/>
                             <constraint firstItem="PBr-IV-hNQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5Tl-py-zew"/>
+                            <constraint firstItem="dfc-HW-0fa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RgW-8v-uzw"/>
                             <constraint firstItem="PBr-IV-hNQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="m37-gb-EHA"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="PBr-IV-hNQ" id="4dB-g8-ak4"/>
                         <segue destination="1Ab-Gv-ZAd" kind="presentation" identifier="loginSegue" id="PFx-mM-dDY"/>
                     </connections>
                 </viewController>
@@ -598,6 +608,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Twitter_Circle_blue" width="80" height="80"/>
         <image name="cancel" width="52" height="50"/>
         <image name="compose" width="192" height="192"/>
         <image name="heart" width="32" height="29"/>
